# ChangeLog for media-fonts/jisx0213-fonts
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/jisx0213-fonts/ChangeLog,v 1.16 2007/03/18 12:06:10 blubb Exp $

  18 Mar 2007; Simon Stelling <blubb@gentoo.org>
  jisx0213-fonts-20040425-r2.ebuild:
  stable on amd64; bug 171063

  17 Mar 2007; nixnut <nixnut@gentoo.org> jisx0213-fonts-20040425-r2.ebuild:
  Stable on ppc wrt bug 171063

  16 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  jisx0213-fonts-20040425-r2.ebuild:
  Stable on sparc wrt #171063

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org>
  jisx0213-fonts-20040425-r2.ebuild:
  x86 stable

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  jisx0213-fonts-20040425.ebuild, jisx0213-fonts-20040425-r1.ebuild:
  Convert to use elog.

  26 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  jisx0213-fonts-20040425-r2.ebuild:
  Add ~x86-fbsd keyword, restrict binchecks and strip.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  jisx0213-fonts-20040425-r2.ebuild:
  Mark 20040425-r2 stable on ia64

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  jisx0213-fonts-20040425.ebuild:
  Port to modular X.

*jisx0213-fonts-20040425-r2 (12 Jan 2006)

  12 Jan 2006; Robin H. Johnson <robbat2@gentoo.org>
  +jisx0213-fonts-20040425-r2.ebuild:
  Clean up ebuild to use font.eclass and font-ebdftopcf.eclass.

*jisx0213-fonts-20040425-r1 (11 Jan 2006)

  11 Jan 2006; Robin H. Johnson <robbat2@gentoo.org>
  +jisx0213-fonts-20040425-r1.ebuild:
  Fix DEPEND/RDEPEND for modular-X.

  15 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  jisx0213-fonts-20040425.ebuild:
  Stable on amd64.

*jisx0213-fonts-20040425 (04 Aug 2004)

  04 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> jisx0213-fonts-1.03.ebuild,
  +jisx0213-fonts-20040425.ebuild:
  Updated to the latest tarballs.

  03 Feb 2004; <augustus@gentoo.org> jisx0213-fonts-1.03.ebuild:
  Added ~amd64 keyword.

*jisx0213-fonts-1.03 (27 Jul 2003)
