@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/zh-kcfonts/zh-kcfonts-1.05-r2.ebuild,v 1.8 2007/03/18 12:08:40 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/zh-kcfonts/zh-kcfonts-1.05-r2.ebuild,v 1.9 2007/06/13 16:56:32 armin76 Exp $
 
 inherit toolchain-funcs eutils
 
@@ -17,7 +17,7 @@ HOMEPAGE="http://freebsd.sinica.edu.tw/"
 
 LICENSE="freedist"
 SLOT="0"
-KEYWORDS="~alpha amd64 arm ia64 ppc s390 sh sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 arm ia64 ppc s390 sh sparc x86 ~x86-fbsd"
 IUSE=""
 
 DEPEND="|| ( ( x11-apps/mkfontdir x11-apps/bdftopcf ) virtual/x11 )"
