@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/zh-kcfonts
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/zh-kcfonts/ChangeLog,v 1.19 2007/03/18 12:08:40 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/zh-kcfonts/ChangeLog,v 1.20 2007/06/13 16:56:32 armin76 Exp $
+
+  13 Jun 2007; Raúl Porcel <armin76@gentoo.org> zh-kcfonts-1.05-r2.ebuild:
+  alpha stable wrt #171063
 
   18 Mar 2007; Simon Stelling <blubb@gentoo.org> zh-kcfonts-1.05-r2.ebuild:
   stable on amd64; bug 171063
