@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/jisx0213-fonts
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/jisx0213-fonts/ChangeLog,v 1.16 2007/03/18 12:06:10 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/jisx0213-fonts/ChangeLog,v 1.17 2007/06/13 16:53:56 armin76 Exp $
+
+  13 Jun 2007; Raúl Porcel <armin76@gentoo.org>
+  jisx0213-fonts-20040425-r2.ebuild:
+  alpha stable wrt #171063
 
   18 Mar 2007; Simon Stelling <blubb@gentoo.org>
   jisx0213-fonts-20040425-r2.ebuild:
